# library

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-prod_template.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_age_customuser_bio_customuser_country_and_more.py
accounts/tests/: test_models.py  test_signup_page.py
catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_author_middle_name.py  0002_alter_bookinstance_options.py  0002_author_middle_name_book_pages_book_publisher.py  0003_alter_book_pages.py  0003_alter_genre_options.py  0004_alter_book_options_alter_language_options_and_more.py  0004_book_cover.py
catalog/tests/: factories.py  test_forms.py  test_models.py  test_views.py  tests.py
config/: settings.py  test.py  urls.py
docs/: changelog.rst  conf.py  contributing.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_654d36064f8f30c0_test_forms_py.html  d_654d36064f8f30c0_test_models_py.html  d_654d36064f8f30c0_test_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_de40790304c5a7ec_admin_py.html  d_de40790304c5a7ec_apps_py.html  d_de40790304c5a7ec_forms_py.html  d_de40790304c5a7ec_models_py.html  d_de40790304c5a7ec_urls_py.html  d_de40790304c5a7ec_views_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  index.html  status.json  z_1ea838694151cac8_test_py.html  z_1ea838694151cac8_urls_py.html  z_509fd8af0f7a1b49_admin_py.html  z_509fd8af0f7a1b49_apps_py.html  z_509fd8af0f7a1b49_forms_py.html  z_509fd8af0f7a1b49_models_py.html  (+23 more)
pages/: tests.py  views.py
pages/tests/: test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.54e1eafdb9a1.css  base.css
templates/: about.html  base.html  home.html  index.html
templates/account/: account_reset_password.html  account_reset_password_complete.html  account_reset_password_done.html  account_set_password_done.html  email.html  email_confirm.html  logged_out.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  user_detail.html  user_form.html
templates/account/email/: base_message.txt  email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt  unknown_account_message.txt
templates/admin/: base_site.html
templates/catalog/: author_confirm_delete.html  author_create.html  author_detail.html  author_form.html  author_list.html  author_update.html  book_confirm_delete.html  book_create.html  book_detail.html  book_list.html  book_renew_librarian.html  book_update.html  bookinstance_list_borrowed_all.html  bookinstance_list_borrowed_user.html  search_results.html
templates/pages/: contact.html  success.html
templates/registration/: email.html  login.html  logout.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html  signup.html
templates/socialaccount/: authentication_error.html  login.html
