[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | migrations
)/
'''

[tool.coverage.paths]
source = ["accounts", "catalog", "config", "pages"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 79

[tool.poetry]
name = "library"
version = "0.1.0"
description = "A lending library built using the Django web framework"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
environs = {extras = ["django"], version = "^9.5.0"}
django-bootstrap4 = "^22.1"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.1.5"
django-allauth = "^0.50.0"
Pillow = "^9.1.1"
psycopg2-binary = "^2.9.3"
django-countries = "^7.3.2"
whitenoise = "5.3.0"
gunicorn = "~=20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
django-debug-toolbar = "^3.4.0"
tblib = "^1.7.0"
django-test-plus = "^2.2.0"
pytest-sugar = "^0.9.4"
ipython = "^8.4.0"
friendly = "^0.5.29"
colorama = "^0.4.4"
nox = "^2022.1.7"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.6.22"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
safety = "^2.1.0"
factory-boy = "3.0.1"
pip-check = "^2.7"
pip-audit = "^2.4.3"
Sphinx = "^5.1.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
